--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -25,7 +25,7 @@
         }
 
         .logout-button {
-            background-color: #f44336; /* Rojo para el botón de cerrar sesión */
+            background-color: #f44336;
             color: white;
             padding: 10px 20px;
             margin-top: 20px;
@@ -33,12 +33,12 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 18px;
-            text-decoration: none; /* Remover subrayado de enlaces */
-            display: inline-block; /* Permitir que se apliquen estilos de margen y padding */
+            text-decoration: none;
+            display: inline-block;
         }
 
         .logout-button:hover {
-            background-color: #c62828; /* Rojo más oscuro para efecto hover */
+            background-color: #c62828;
         }
         
     </style>
