--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -51,16 +51,16 @@
             margin-top: 20px;
         }
         a {
-            color: #ffffff; /* Color blanco para el texto */
-            background-color: #2f80ed; /* Fondo azul para el botón */
-            padding: 8px 15px; /* Espaciado interno para hacerlo más grande */
-            text-decoration: none; /* Eliminar subrayado de enlaces */
-            border-radius: 5px; /* Bordes redondeados */
-            transition: background-color 0.3s; /* Transición suave para el color de fondo */
+            color: #ffffff;
+            background-color: #2f80ed;
+            padding: 8px 15px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s; 
         }
 
         a:hover {
-            background-color: #56ccf2; /* Color celeste al pasar el ratón por encima */
+            background-color: #56ccf2;
         }
     </style>
 </head>
