--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #56ccf2, #2f80ed); /* Gradiente de azul a celeste */
+            background: linear-gradient(to right, #56ccf2, #2f80ed);
             color: white;
             text-align: center;
             padding: 50px;
