--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #007bff; /* Un tono de azul */
+            background-color: #007bff;
             color: white;
             text-align: center;
             padding-top: 50px;
@@ -19,16 +19,16 @@
         p {
             margin-bottom: 1em;
             background-color: white;
-            color: #007bff; /* Un tono de azul */
+            color: #007bff; 
             display: inline-block;
             padding: 0.5em 1em;
             border-radius: 10px;
         }
 
         button {
-            background-color: white; /* Botón blanco */
-            color: #007bff; /* Texto azul */
-            border: 2px solid #007bff; /* Borde azul */
+            background-color: white;
+            color: #007bff; 
+            border: 2px solid #007bff;
             padding: 10px 20px;
             border-radius: 5px;
             font-size: 1em;
@@ -38,7 +38,7 @@
         }
 
         button:hover {
-            background-color: #0056b3; /* Azul más oscuro para el efecto hover */
+            background-color: #0056b3;
             color: white;
             border-color: #0056b3;
         }
